# blatt-2-super-team-1

./: .gitignore  .travis.yml  AlgDat_II.pro  CMakeLists.txt  Makefile  MyApp.cpp  MyApp.h  README.md  block.cpp  block.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefile  word_table.cpp  word_table.h  words.cpp  words.h
doc/: Doxyfile
doc/html/: annotated.html  block_8h_source.html  classBlock-members.html  classBlock.html  classBlock_1_1Entry-members.html  classBlock_1_1Entry.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classWordTable-members.html  classWordTable.html  classWordTable_1_1Iterator-members.html  classWordTable_1_1Iterator.html  classWordTable_1_1Iterator__coll__graph.dot  classWordTable_1_1Iterator__coll__graph.md5  classWords-members.html  classWords.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_2.dot  inherit_graph_2.md5  inherit_graph_3.dot  inherit_graph_3.md5  inherit_graph_4.dot  inherit_graph_4.md5  inherit_graph_5.dot  inherit_graph_5.md5  inherits.html  mainwindow_8h_source.html  word__table_8h_source.html  words_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  functions_8.js  functions_9.js  functions_b.js  functions_e.js  functions_f.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
docs/: Doxyfile  annotated.html  block_8h_source.html  classBlock-members.html  classBlock.html  classBlock_1_1Entry-members.html  classBlock_1_1Entry.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.md5  classWordTable-members.html  classWordTable.html  classWordTable_1_1Iterator-members.html  classWordTable_1_1Iterator.html  classWords-members.html  classWords.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_1.md5  inherits.html  mainpage.dox  mainwindow_8h_source.html  word__table_8h_source.html  words_8h_source.html
docs/search/: all_3.js  all_8.js  all_b.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_c.js  related_0.js  searchdata.js  variables_2.js
include/: block.hpp  word_table.hpp  words.hpp
src/: AlgDatII.cpp  CMakeLists.txt  Main.cpp  block.cpp  word_table.cpp  word_table.hpp  words.cpp
test/: .gitignore  CMakeLists.txt  Main_TestAll.cpp  block_entry_test.cpp  block_test.cpp  word_table_entry_test.cpp  word_table_iterator_test.cpp  word_table_test.cpp  words_iterator_test.cpp  words_test.cpp
test/files/: words.data_1.txt
